add link to repo on npm

--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "_from": "alfred-brutto-netto-rechner-aut",
-  "_id": "alfred-brutto-netto-rechner-aut@1.0.3",
+  "_id": "alfred-brutto-netto-rechner-aut@1.0.4",
   "_inBundle": false,
   "_integrity": "sha512-y+D8ocW0Y1mEQDBahP+MAWj9kvv3YgCn/OHkdPwORh+npEUfeX5g7YNkpSEeVWKdsn+4zK0ag4AVyjHKeEs71w==",
   "_location": "/alfred-brutto-netto-rechner-aut",
@@ -42,5 +42,9 @@
   },
   "readme": "README.md",
   "keywords": ["Brutto", "Netto", "rechner", "calculator", "Austria", "Aut", "Österreich", "finance", "finanzen"],
-  "version": "1.0.3"
+  "version": "1.0.4",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/marckrenn/alfred-brutto-netto-rechner-aut"
+}
 }
